--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/images/coffee/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
