--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ flutter:
   assets:
     - assets/images/
     - assets/images/coffee/
+    - assets/images/Beverage/
+    - assets/images/Blending_Tea/
+    - assets/images/Flatccino/
+    - assets/images/Ice_Flakes/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
